<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.winision.velammalitapp.Resume">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/aboutTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/aboutYourself"
                    android:inputType="textMultiLine" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/Skills"
                    android:textColor="@android:color/white"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:textAlignment="center"/>

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/technicalSkills"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/technicalSkills"
                    android:inputType="textMultiLine"
                    android:textColor="@android:color/white" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/interpersonalSkillsTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/interpersonalSkills"
                    android:inputType="textMultiLine"
                    android:textColor="@android:color/white" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/marketingTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/marketingSkills"
                    android:inputType="textMultiLine"
                    android:textColor="@android:color/white" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/skillDeployment"
                    android:textColor="@android:color/white"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:textSize="32sp"/>

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/achievementsTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/achievements"
                    android:inputType="textMultiLine"
                    android:textColor="@android:color/white" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/activitiesTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/activities"
                    android:inputType="textMultiLine"
                    android:textColor="@android:color/white" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/education"
                    android:textColor="@android:color/white"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:textSize="32sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/percentSSLC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/percentageSSLC"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/percentHSC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/percentageHSC"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/percentCGPA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/CGPA"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/socialPresence"
                    android:textColor="@android:color/white"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:textSize="32sp"/>

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/fbTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/fb"
                    android:textColor="@android:color/white" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/instaTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/instagram"
                    android:textColor="@android:color/white" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/linkedInTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/linkedin"
                    android:textColor="@android:color/white" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/otherNetTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/othernetworks"
                    android:inputType="textMultiLine"
                    android:textColor="@android:color/white" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/gitTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/github"
                    android:inputType="textMultiLine"
                    android:textColor="@android:color/white" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blogs"
                    android:textColor="@android:color/white"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:textSize="32sp"/>

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/blogsTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/blogs"
                    android:inputType="textMultiLine"
                    android:textColor="@android:color/white" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/additionalInfoTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/additionalInfo"
                    android:textColor="@android:color/white" />
            </LinearLayout>

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_btn"
            android:text="@string/Submit"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
        </LinearLayout>


</ScrollView>
