<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.winision.velammalitapp.Students_Login">

    <ProgressBar
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_centerInParent="true"
        android:id="@+id/progress"
        android:visibility="invisible"/>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cardView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="56dp"
        android:fontFamily="@font/pacifico"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="48sp"
        android:textStyle="bold" />


    <android.support.v7.widget.CardView
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="125dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        android:outlineProvider="background"
        android:id="@+id/cardView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/login_card">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@mipmap/ic_email_white_48dp" android:contentDescription="TODO"/>

                <EditText
                    android:id="@+id/emailTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/login_text"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textWebEmailAddress"
                    android:textAlignment="textStart" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="25dp"
                    android:layout_marginBottom="30dp"
                    android:src="@mipmap/ic_lock_white_48dp" android:contentDescription="TODO"/>

                <EditText
                    android:id="@+id/passwordTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/login_text"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </LinearLayout>

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="160dp"
                android:text="@string/login"
                android:textStyle="bold"
                android:textSize="16sp"
                android:id="@+id/loginBtn"
                android:textColor="@android:color/white"
                android:background="@drawable/login_btn"
                android:layout_marginBottom="20sp"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="95dp"
        android:text="@string/forgot"
        android:id="@+id/forgotTxt"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/create_accountTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/cardView"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="19dp"
        android:text="@string/create_account"
        android:textColor="@android:color/white"
        android:textSize="15sp"/>


</RelativeLayout>
