<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.winision.velammalitapp.Student_Settings">


    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="87dp"
        android:src="@mipmap/ic_person_white_48dp"
        android:id="@+id/proPic"
        app:civ_border_color="@android:color/white"
        app:civ_border_overlay="true"
        app:civ_border_width="5dp" />




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@mipmap/ic_person_white_48dp"
                    android:layout_marginTop="4dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:id="@+id/nameTxt"
                    android:textColor="@android:color/white"
                    android:textSize="28sp"
                    android:textAlignment="center"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="3dp"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:id="@+id/statusTxt"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="18dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="10dp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="15dp">


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_btn"
                    android:text="@string/edit"
                    android:layout_marginLeft="20dp"
                    android:textColor="@android:color/white"
                    android:id="@+id/editBtn"
                    android:textStyle="bold"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_btn"
                    android:layout_marginLeft="150dp"
                    android:id="@+id/signOut"
                    android:text="@string/sign_out"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"/>

            </LinearLayout>



        </LinearLayout>





</RelativeLayout>
