<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context="com.winision.velammalitapp.register_students">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/cardView3"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="59dp"
        android:layout_marginTop="27dp"
        android:fontFamily="@font/pacifico"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="46dp"
        android:textStyle="bold" />

    <android.support.v7.widget.CardView
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="250dp"
        app:cardElevation="10dp"
        android:id="@+id/cardView3">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/login_card">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="20dp"/>

                <EditText
                    android:id="@+id/nameTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView2"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/login_text"
                    android:hint="@string/name" />

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="20dp"
                    android:src="@mipmap/ic_email_white_48dp"/>

                <EditText
                    android:id="@+id/emailTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/nameTxt"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/login_text"
                    android:hint="@string/email" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="20dp"
                    android:src="@mipmap/ic_lock_white_48dp"/>

                <EditText
                    android:id="@+id/passwordTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/emailTxt"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/login_text"
                    android:hint="@string/password" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="20dp"/>

                <Spinner
                    android:id="@+id/deptSpin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/passwordTxt"
                    android:layout_marginTop="20dp"></Spinner>

            </LinearLayout>


            <Button
                android:id="@+id/signUp"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="150dp"
                android:background="@drawable/login_btn"
                android:text="@string/sign_up"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>
